--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="index.html" class="nav__logo">Andressa</a>
+                    <a href="index.html" class="nav__logo">ANDRESSA</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="index.html#home" class="nav__link active">Home</a></li>
-                        <li class="nav__item"><a href="index.html#about" class="nav__link">sobre</a></li>
+                        <li class="nav__item"><a href="index.html#about" class="nav__link">Sobre</a></li>
                         <li class="nav__item"><a href="index.html#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="index.html#work" class="nav__link">Trabalhos</a></li>
                         <li class="nav__item"><a href="index.html#contact" class="nav__link">Contato</a></li>
@@ -67,7 +67,8 @@
                     <div>
                         <h2 class="about__subtitle">Sobre mim</h2>
                         <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque. <br>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem enim inventore dolorum in ipsam corrupti ut illo dolores veritatis tenetur itaque cupiditate, illum fugiat nam laboriosam tempore esse sequi! Alias.</p>           
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem enim inventore dolorum in ipsam corrupti ut illo dolores veritatis tenetur itaque cupiditate, illum fugiat nam laboriosam tempore esse sequi! Alias.<br>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias dolor sit adipisci? Maiores, odit fuga, aliquam ea dignissimos suscipit eius non nesciunt assumenda repudiandae voluptatem ipsa repellendus ad, minima ipsum.</p>
                     </div>                                   
                 </div>
             </section>
